<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context=".ui.register.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_arrow_back_24"
                    app:tint="@color/white"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="19dp"
                    tools:srcCompat="@drawable/ic_arrow_back_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_create_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_create_new_account"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_student_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_enter_student_id"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_register" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_student_id"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_student_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_full_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_student_id" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_full_name"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_full_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="@id/input_password"
                app:layout_constraintEnd_toEndOf="@id/input_password"
                app:layout_constraintTop_toTopOf="@id/input_password"
                app:srcCompat="@drawable/ic_show_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_full_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_email"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_mobile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_mobile_phone"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_mobile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_mobile_phone"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_mobile_phone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_button_sign_in"
                android:padding="10dp"
                android:text="@string/text_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/input_mobile_phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/text_sign_in_if_already_had_account"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>