<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Tiêu đề: Đăng nhập -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_sign_in"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <!-- Phụ đề -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sign_in_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/text_sign_in_subtitle"
                android:textColor="@color/color_grey_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/text_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/text_sign_in" />

            <!-- Nhãn Email -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/text_email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_sign_in_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/text_sign_in_subtitle" />

            <!-- Ô nhập Email -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_email"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_email" />

            <!-- Nhãn Mật khẩu -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_email"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <!-- Ô nhập Mật khẩu -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext_sign_in_form"
                android:elevation="4dp"
                android:hint="@string/text_enter_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_grey_dark"
                android:textSize="16sp"
                android:translationZ="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_password" />

            <!-- Nút bật/tắt hiện mật khẩu -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="@id/input_password"
                app:layout_constraintEnd_toEndOf="@id/input_password"
                app:layout_constraintTop_toTopOf="@id/input_password"
                app:srcCompat="@drawable/ic_show_password" />

            <!-- Nút "Quên mật khẩu?" -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_forget_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <!-- Nút Đăng nhập -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_button_sign_in"
                android:padding="10dp"
                android:text="@string/text_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/text_forget_password" />

            <!-- Nút chuyển đến màn hình Đăng ký -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/text_sign_up_if_already_had_account"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
